Sensors framework (WIP)

--- a/Resources/public/less/bootstrap-fixes.less
+++ b/Resources/public/less/bootstrap-fixes.less
@@ -106,3 +106,19 @@ li.panel-footer {
         overflow: visible;
     }
 }
+
+.icon-primary {
+  color: @brand-primary;
+}
+.icon-warning {
+  color: @brand-warning;
+}
+.icon-danger {
+  color: @brand-danger;
+}
+.icon-success {
+  color: @brand-success;
+}
+.icon-info {
+  color: @brand-info;
+}
