--- a/Resources/public/less/forms.less
+++ b/Resources/public/less/forms.less
@@ -57,3 +57,26 @@
 .form-inline .form-group.row {
   display: block;
 }
+
+.dropdown-menu {
+  .dropdown-form-header {
+    padding: 3px 20px;
+    margin-bottom: -9px;
+    font-weight: bold;
+    line-height: @line-height-base;
+  }
+  form {
+    width: 300px;
+    margin: 9px 20px;
+  }
+}
+
+.sensor-chart {
+  border-top: 1px solid #e3e3e3;
+  margin: 0 -15px;
+  padding: 15px;
+  .dropdown {
+    position: absolute;
+    z-index: 10;
+  }
+}
