--- a/Resources/public/less/local.less
+++ b/Resources/public/less/local.less
@@ -69,11 +69,11 @@
 }
 
 .label.status {
-  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .label.status:last-child {
-  margin-right: 0;
+  margin-left: 0;
 }
 
 div.status {
