--- a/Resources/public/less/bluemesabasebundle.less
+++ b/Resources/public/less/bluemesabasebundle.less
@@ -32,7 +32,7 @@
 
 .antibody_applications_form_group .collection-item {
   position: relative;
-  margin: 0;
+  margin: 0 15px;
   min-height: 20px;
   padding: 15px;
   margin-bottom: 15px;
