--- a/Resources/views/navbar.html.twig
+++ b/Resources/views/navbar.html.twig
@@ -17,6 +17,9 @@
         <li>
           <a href="{{ path('bluemesa_antibody_antibody_list') }}">Antibodies</a>
         </li>
+        <li>
+          <a href="{{ path('bluemesa_construct_index') }}">Constructs</a>
+        </li>
       </ul>
     </div>
   </div>
