AntibodyBundle upgraded to use the CRUD Bundle.

--- a/Resources/views/navbar.html.twig
+++ b/Resources/views/navbar.html.twig
@@ -15,7 +15,7 @@
           <a href="{{ path('bluemesa_flies_welcome_index') }}">Flies</a>
         </li>
         <li>
-          <a href="{{ path('bluemesa_antibody_antibody_list') }}">Antibodies</a>
+          <a href="{{ path('bluemesa_antibody_index') }}">Antibodies</a>
         </li>
         <li>
           <a href="{{ path('bluemesa_construct_index') }}">Constructs</a>
