Awesome file-upload functionality for ConstructBundle

--- a/Resources/public/less/bluemesabasebundle.less
+++ b/Resources/public/less/bluemesabasebundle.less
@@ -24,6 +24,7 @@
 @import '../../../../../../../src/Bluemesa/Bundle/FormsBundle/Resources/public/less/bootstrap-select2.less';
 @import '../../../../../../../src/Bluemesa/Bundle/FormsBundle/Resources/public/less/bootstrap-typeahead.less';
 @import '../../../../../../../src/Bluemesa/Bundle/FormsBundle/Resources/public/less/bootstrap-collections.less';
+@import '../../../../../../../src/Bluemesa/Bundle/FormsBundle/Resources/public/less/bootstrap-fileinput.less';
 // @import '../../../../../../../vendor/bluemesa/forms-bundle/Resources/public/less/bootstrap-select2.less';
 // @import '../../../../../../../vendor/bluemesa/forms-bundle/Resources/public/less/bootstrap-typeahead.less';
 // @import '../../../../../../../vendor/bluemesa/forms-bundle/Resources/public/less/bootstrap-collections.less';
