--- a/Resources/views/Macros/show.html.twig
+++ b/Resources/views/Macros/show.html.twig
@@ -144,6 +144,6 @@
 {% if is_granted('ROLE_ADMIN') or is_granted('EDIT',value) %}
   <a href="{{ path(name ~ '_edit', { 'id': value.id }) }}" class="btn btn-primary">Edit</a>
 {% endif %}
-  <a href="{{ path(name ~ '_list') }}" class="btn btn-default">List</a>
+  <a href="{{ path(name ~ '_index') }}" class="btn btn-default">List</a>
 {% endspaceless %}
 {% endmacro %}
