--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -179,7 +179,7 @@
       '../bower_components/typeahead.js/dist/bloodhound.js'
       '../bower_components/typeahead.js/dist/typeahead.jquery.js'
       '../bower_components/bootstrap-datepicker/js/bootstrap-datepicker.js'
-      '../bower_components/select2/dist/js/select2.js'
+      '../bower_components/select2/dist/js/select2.full.js'
       '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
       '@BluemesaFormsBundle/Resources/public/js/forms.js'
       '@BluemesaAclBundle/Resources/public/js/forms.js'
